fix linebreak, update url, layer list visible

--- a/src/_client.scss
+++ b/src/_client.scss
@@ -772,6 +772,7 @@ input,
   overflow-y: auto;
   padding: 0px 8px 0px 12px;
   margin-right: 8px;
+  overflow-wrap: break-word;
 }
 
 .record-details-description-inner {
